# uk_election_map

./: pyproject.toml
generate_data/: generate_data_2024.py  generate_data_other.py
